@startuml FileSystem
skinparam DefaultFontName "JetBrains Mono"
skinparam classAttributeIconSize 0
left to right direction

package filesystem {
    abstract class Registration {
        + getSize(): int
    }

    class File {
        - size: int
        --
        + File(size: int)
        + getSize(): int
    }

    class Folder {
        - items: List<Registration>
        --
        + getSize(): int
        + add(r: Registration): void
        + remove(r: Registration): boolean
    }

    class FileSystem {
        + main(args: String[]): void
    }
}

Registration <|-- File
Registration <|-- Folder
Folder o-- "0..*" Registration : contains
FileSystem ..> File
FileSystem ..> Folder

note right of Registration
    Common abstraction for anything that can report a size.
end note

note right of File
    Leaf node of the tree.
    Its size is a stored value.
end note

note right of Folder
    Composite node.
    Its size is computed recursively by summing child sizes.
end note

note bottom of Folder
    Design pattern used here:
    Composite

    Files and folders share the same base type,
    so client code can treat them uniformly.
end note

@enduml